# birdrust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
client/: .env.example  README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs
client/src/lib/: format.ts  report.ts  types.ts
client/src/lib/components/: DroneMap.svelte  LoadingSpinner.svelte  MapStaticElements.svelte  ViolatorList.svelte
client/src/routes/: +page.svelte
src/: api.rs  lib.rs  logic.rs  main.rs  types.rs
