[package]
name = "birdnest_server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.2", features = ["ws"] }
tokio = { version = "1.24.1", features = ["full"] }
reqwest = { version = "0.11.6", features = ["json"] }
quick-xml = { version = "0.17", features = ["serialize"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
futures = "0.3.25"
chrono = "0.4.23"
