[package]
name = "birdrust"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.15", features = ["ws"] }
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11.16", features = ["json"] }
quick-xml = { version = "0.28", features = ["serialize"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
futures = "0.3.28"
chrono = "0.4.24"
tower-http = { version = "0.4.0", features = ["cors"] }
